Started with the cover page

--- a/cheat-sheet.tex
+++ b/cheat-sheet.tex
@@ -1,9 +1,9 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 
-\title{Raff scratch notes}
-\author{raffp }
-\date{April 2021}
+\title{Mathcounts Cheat Sheet}
+\author{Paul Raff}
+\date{Last updated: February 2022}
 
 \begin{document}
 
